kube_deploy/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ft-transcendence-my-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - args:
            - bash
            - -c
            - npm install && npx prisma migrate deploy &&  npm run start
          image: node:18.12.1-buster
          name: backend
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app
              name: backend-hostpath0
          workingDir: /usr/src/app
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/ubuntu/projects/ft_transcendence/src/backend_nest
          name: backend-hostpath0
status: {}
