kube_deploy/ingressAndCerfit.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-ingress
spec:
  rules:
    - host: pong.babdelka.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loadbalancer
                port:
                  number: 80
  tls:
    - hosts:
        - pong.babdelka.systems
      secretName: pong-certificate
---
